Move signal handling in a function. Also add helper error_on_exit.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,10 +8,11 @@ SRC = \
 	builtin.c \
 	input.c \
 	job_control.c \
+	helpers.c \
 	main.c \
 
 build:
-	gcc -g -Wall -Wpedantic $(LIBS) $(SRC) -o $(EXEC)
+	gcc -g -Wall -Wpedantic $(LIBS) $(SRC) -o $(EXEC) && chmod +x $(EXEC)
 
 run: build
 	./$(EXEC)
